# transit-works

./: .gitignore  LICENSE  README.md
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/technical-details/: routing.md  technical-details.md  travel-demand.md
frontend/: .eslintrc.json  .prettierrc.json  package-lock.json  package.json  tailwind.config.js
frontend/public/: default.json
frontend/public/data/: city_stats.json  world_topo.json
frontend/public/styles/: dark_matter.json  dark_matter_3d.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/city-select/: page.js
frontend/src/app/faq/: page.js
frontend/src/app/map/: loading.js  page.js
frontend/src/components/common/: AnimatedText.js  ImageButton.js  Legend.js  ScrollIndicator.js
frontend/src/components/maps/: Map.css  Map.js  OptimizationProgress.js  OptimizationResultsModal.js  (+2 more)
frontend/src/utils/: api.js  colorUtils.js  routeTypeColors.js
libs/: gtfs_to_geojson.rs  main.rs
route-service/: .gitignore  Cargo.toml  README.md
route-service/src/: layers.rs  lib.rs  main.rs
route-service/src/gtfs/: error.rs  geojson.rs  gtfs.rs  mod.rs  raw_gtfs.rs  structs.rs
route-service/src/layers/: bus_network.rs  city.rs  error.rs  geo_util.rs  grid.rs  grid_network.rs  mod.rs  road_network.rs  transit_network.rs
route-service/src/opt/: aco.rs  aco2.rs  consts.rs  eval.rs  ga_params.rs  mod.rs
route-service/src/server/: cors.rs  mod.rs  opt_ws.rs  proxy.rs  server.rs
scripts/: .gitignore  README.md  demand.py  gravity_model.py  populate_db.py  requirements.txt  schema.sql
(+22 files in other folders)
