[package]
name = "route-service"
version = "0.1.0"
edition = "2021"
default-run = "route-service"

[[bin]]
name = "ctl"
path = "src/bin/ctl.rs"

[dependencies]
geo-types = { version = "0.7.13", features = ["serde"] }
petgraph = { version = "0.6.5", features = ["serde-1"] }
rstar = { version = "0.12.0", features = ["serde"] }
rusqlite = "0.32.0"
wkt = "0.11.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "2.0.3"
zip = "2.2.0"
serde_json = "1.0.134"
actix-web = "4"
rand = "0.8.5"
clap = { version = "4.5.27", features = ["derive"] }
geo = "0.29.3"
log = "0.4.25"
env_logger = "0.11.6"
bincode = "1.3.3"
actix-cors = "0.7.0"
